--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     text-decoration: none;
     border: none;
     outline: none;
-    scroll-behavior:smooth;
+    scroll-behavior:auto;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -166,9 +166,24 @@ span{
     letter-spacing: .1rem;
     font-weight: 600;
     transition: .5s ease;
+    font-size: 20px;
 
-  font-size: 20px;
+}
 
+.btn1{
+    
+    display: inline-block;
+    padding: 1rem 3rem;
+    background: var(--main-color);
+    border-radius: 4rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 1.4rem;
+    color: var(--second-bg-color);
+    letter-spacing: .1rem;
+    font-weight: 600;
+    transition: .5s ease;
+    font-size: 20px;
+    margin-top: 30px;
 }
 
 .btn:hover{
